<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="375dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/logoIrene"
            app:srcCompat="@drawable/logo_original_con_nuevas_letras_mas_grandes_arriba_negro" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:textColor="#000"
            app:backgroundTint="#FF6FEC" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            android:textColor="#000"
            app:backgroundTint="#FF6FEC" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            android:textColor="#000"
            app:backgroundTint="#FF6FEC" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn5"
            android:textColor="#000"
            app:backgroundTint="#FF6FEC" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn6"
            android:textColor="#000"
            app:backgroundTint="#FF6FEC" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>